<resources>
    <string name="app_name">TTSProjectTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading, please wait...</string>
    <string name="title_activity_go_screen">GoScreen</string>
    <string name="title_activity_screen_b">ScreenB</string>
    <string name="Go">Go</string>
    <string name="title_activity_screen_c">ScreenC</string>
    <string name="enter_text">Enter text</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="dialog_enter_text">Enter text</string>
</resources>
