<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.pundroid.ttsprojecttest.ScreenC">

    <com.inthecheesefactory.thecheeselibrary.widget.AdjustableImageView
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/foto"
        android:text="@string/hello_world"/>

    <TextView
        android:id="@+id/timerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#ffffff"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/btnEnterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPlay"
        android:layout_alignEnd="@+id/btnPlay"
        android:layout_alignLeft="@+id/view"
        android:layout_alignRight="@+id/btnPlay"
        android:layout_alignStart="@+id/view"
        android:text="@string/enter_text"/>


    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnPause"
        android:layout_alignEnd="@+id/view"
        android:layout_alignLeft="@+id/view"
        android:layout_alignRight="@+id/view"
        android:layout_alignStart="@+id/view"
        android:text="@string/play"/>

    <Button
        android:id="@+id/btnPause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStop"
        android:layout_alignEnd="@+id/btnPlay"
        android:layout_alignLeft="@+id/btnPlay"
        android:layout_alignRight="@+id/btnPlay"
        android:layout_alignStart="@+id/btnPlay"
        android:enabled="false"
        android:text="@string/pause"/>


    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btnPause"
        android:layout_alignLeft="@+id/btnPause"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btnPause"
        android:layout_alignStart="@+id/btnPause"
        android:enabled="false"
        android:text="@string/stop"/>

</RelativeLayout>
